--- a/style.css
+++ b/style.css
@@ -3,13 +3,32 @@
     font-weight: 700;
 }
 
-.word{
+.word {
 }
 
-.word::after{
+.word::after {
     content: " ";
 }
 
-.correct{
+.correct {
     color: green;
+}
+
+body {
+    user-select: none;
+}
+
+#close-button {
+    -webkit-app-region: no-drag;
+    background: transparent;
+    border: none;
+    margin: 0;
+    color: gray;
+    width: 50px;
+    font-size: 14px;
+    cursor: initial;
+}
+
+#close-button:hover {
+    background: #f00;
 }
